@@ -3,6 +3,10 @@
 
 2004-09-12  Neil Spierling <vulcan@linux-boxen.org>
 
+	* ircd/gline.c: Bug fix (see ChangeLog).
+
+2004-09-12  Neil Spierling <vulcan@linux-boxen.org>
+
 	* doc/example.conf: Added ANNOUNCE_INVITES.
 
 	* include/ircd_features.h: Same as example.conf entry.
