@@ -1,5 +1,7 @@
 2004-09-11  Kevin L Mitchell  <klmitch@mit.edu>
 
+	* ircd/gline.c (gline_add): fix GLINE logging (Bug #750927)
+
 	* ircd/channel.c: removing limits shouldn't gobble an argument;
 	this was a subtle interaction issue with modebuf...fixed by adding
 	MODE_LIMIT to modebuf_flush_int() and short-circuiting
